# smart-web-search-package

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py  sws_client.py
SWSTools/: sws_server.py
SWSTools (deprecated)/: sws_server.py
SmartWebSearch/: AIModel.py  ChromeDriver.py  Debugger.py  KeyCheck.py  Progress.py  QueryStorm.py  RAGTool.py  SmartWebSearch.py  Summarizer.py  TavilySearch.py  __init__.py
SmartWebSearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
