[project]
name = "SmartWebSearch"
version = "1.2.1"
authors = [
  { name="LIN WAI CHON", email="jacksonlam.temp@gmail.com" },
]
description = "SmartWebSearch is a Python package that combines the Tavily search API with Retrieval-Augmented Generation (RAG), LLM-powered query expansion, and web content extraction to perform intelligent, deep web searches with automated summarization."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/LittleWai07/smart-web-search-package"
Issues = "https://github.com/LittleWai07/smart-web-search-package/issues"
